modified media file

--- a/html/School Engineering Assignment/media.html
+++ b/html/School Engineering Assignment/media.html
@@ -78,7 +78,7 @@
     <hr />
     <h3>Video 1</h3>
     <video
-      src="Asset/Videos/The Farmer.mp4"
+      src="Asset/Videos/The Farmer_small.mp4"
       controls
       height="600px"
       title="I have a side hobby of farming, so this is the farm"
