New commit corrections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
-    <link rel="stylesheet" href="./Styles/index.css">
+    <link rel="stylesheet" href="/html/School Engineering Assignment/Styles/index.css">
   </head>
   <body>
   <header class="header" id="top">
@@ -14,9 +14,9 @@
     <nav>
       <ul>
       <li><a href="./index.html" target="blank">Home</a></li> 
-      <li><a href="./form.html" target="_blank">Form</a></li>
-      <li><a href="./media.html" target="_blank">Media Gallery</a></li>
-      <li><a href="table.html" target="_blank">Table</a> </li>
+      <li><a href="/html/School Engineering Assignment/form.html" target="_blank">Form</a></li>
+      <li><a href="/html/School Engineering Assignment/media.html" target="_blank">Media Gallery</a></li>
+      <li><a href="/html/School Engineering Assignment/table.html" target="_blank">Table</a> </li>
     </ul>
     </nav>
   </header>
