--- a/html/School Engineering Assignment/media.html
+++ b/html/School Engineering Assignment/media.html
@@ -11,7 +11,7 @@
       <main>
         <nav class="navigation">
           <ul class="links">
-          <li><a href="./index.html" target="_blank" id="about" >Home</a></li>
+          <li><a href="/index.html" target="_blank" id="about" >Home</a></li>
           <li><a href="./form.html" target="_blank">Form</a></li>
           <li><a href="./table.html" target="_blank">Table</a></li>
           <li><a href="./media.html" target="_blank">Media Gallery</a></li>
