correction on the links and rearragement of files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me</title>
-    <link rel="stylesheet" href="/School Engineering Assignment/Styles/index.css">
+    <title>BIOGRAPHY</title>
+    <link rel="stylesheet" href="./Styles/index.css">
   </head>
   <body>
   <header class="header" id="top">
@@ -13,10 +13,10 @@
     <h3><i>STUDENT ID: ALT/SOE/024/0374</i></h3>
     <nav>
       <ul>
-      <li><a href="./index.html" target="blank">Home</a></li> 
-      <li><a href="/School Engineering Assignment/form.html" target="_blank">Form</a></li>
-      <li><a href="/School Engineering Assignment/media.html" target="_blank">Media Gallery</a></li>
-      <li><a href="/School Engineering Assignment/table.html" target="_blank">Table</a> </li>
+      <li><a href="/index.html" target="blank">Home</a></li> 
+      <li><a href="/form.html" target="_blank">Form</a></li>
+      <li><a href="/media.html" target="_blank">Media Gallery</a></li>
+      <li><a href="/table.html" target="_blank">Table</a> </li>
     </ul>
     </nav>
   </header>
